--- a/style.css
+++ b/style.css
@@ -146,6 +146,44 @@ canvas {
    align-items: center;
  }
 
+ .third-cont {
+   margin-top: 200px;
+   height: 400px;
+   width: 70%;
+   display: flex;
+   flex-direction: row;
+   justify-content: flex-end;
+ }
+
+ .third-cont-flex{
+   width: 45%;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   height: 300px;
+ }
+
+ .third-cont-top {
+   line-height: 50px;
+
+ }
+
+ .third-cont-middle{
+  height: 120px;
+  
+  color: rgb(172, 170, 170);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 70%;
+  margin-top: 40px;
+ }
+
+ .third-cont-middle p{
+  font-size: 14px;
+  line-height: 23px;
+ }
+
  @keyframes colorswitch {
     0% {
       color: rgb(172, 170, 170);
@@ -212,4 +250,44 @@ canvas {
       
     }
 
+    .second-cont {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 90%;
+      margin-top: 250px;
+      height: 700px;
+    }
+
+    .second-cont-left{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      height: 500px;
+    }
+
+    .second-cont-p-cont{
+      width: 100%;
+      margin-top: 20px;
+      line-height: 30px;
+     
+    }
+
+    .third-cont {
+      margin-top: 200px;
+      height: 400px;
+      width: 90%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+
+    .third-cont-flex{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 300px;
+    }
   }
