--- a/style.css
+++ b/style.css
@@ -300,6 +300,54 @@ canvas {
   margin-right: 2.1px;
 }
 
+.seventh-cont {
+  margin-top: 300px;
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  height: 300px;
+}
+
+.seventh-cont-flex{
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 120px;
+
+}
+
+.seventh-cont-spans {
+  word-spacing: 10px;
+}
+
+.seventh-cont-spans1{
+  font-size: 46px;
+  font-weight: 600;
+  color:white;
+}
+.seventh-cont-spans2{
+  font-size: 46px;
+  font-weight: 600;
+  color:rgb(198,83,59);
+}
+
+.seventh-cont-middle {
+  line-height: 30px;
+}
+
+.seventh-cont-middle .s1{
+  color:rgb(172, 170, 170)
+}
+.seventh-cont-middle .s2{
+  color:rgb(198,83,59)
+}
+.seventh-cont-middle .s3{
+  color:rgb(172, 170, 170)
+}
+
+
 
   @media (max-width:800px) {
     .top-cont {
@@ -427,5 +475,22 @@ canvas {
       justify-content: space-around;
       align-items: center;
       width: 100%;
+    }
+
+    .seventh-cont {
+      margin-top: 300px;
+      width: 90%;
+      display: flex;
+      flex-direction: row;
+      height: 300px;
+    }
+
+    .seventh-cont-flex{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      height: 120px;
+    
     }
   }
