--- a/style.css
+++ b/style.css
@@ -554,4 +554,48 @@ canvas {
       height: 120px;
     
     }
+
+    .eight-cont-footer {
+      margin-top: 150px;
+      height: 600px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 100%;
+      background-color: black;
+      align-items: center;
+    }
+
+    .footer-left {
+      width: 90%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .footer-left iframe {
+      width: 100%;
+      height: 300px;
+    }
+
+    .footer-right {
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+    }
+
+    .footer-right-bottom {
+      height: 100px;
+      border-top: 1px solid gray;
+      width: 400px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      font-size: 14px;
+      color: rgb(172, 170, 170);
+      word-spacing: 5px;
+    }
   }
