--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ canvas {
 :root {
     --dark-bg: rgba(15, 15, 15, 0.95);
     --spacing: 350px;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-style: normal;
     
@@ -22,7 +22,7 @@ canvas {
   }
   
   .main {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Poppins', sans-serif;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -234,6 +234,7 @@ canvas {
 
 .third-cont-top {
   line-height: 50px;
+  width: 110%;
 
 }
 
